src/snapshots/rustic_server__config__test__config_parsing_from_file_passes.snap
---
source: src/config.rs
expression: config
---
[server]
listen = '127.0.0.1:8080'

[storage]
data-dir = 'tests/generated/test_storage/'

[auth]
disable-auth = false
htpasswd-file = 'tests/fixtures/test_data/.htpasswd'

[acl]
disable-acl = false
append-only = false
acl-path = 'tests/fixtures/test_data/acl.toml'

[tls]
disable-tls = true

[log]
