src/snapshots/rustic_server__config__test__default_config_passes.snap
---
source: src/config.rs
expression: config
---
[server]
listen = '127.0.0.1:8000'

[storage]
data-dir = 'C:\Users\dailyuse\AppData\Local\Temp\rustic'

[auth]
disable-auth = false

[acl]
disable-acl = false
append-only = true

[tls]
disable-tls = true

[log]
